k8s/classic/06-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: quizzy-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: egorkhaybulov/quizzy-front:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: quizzy-namespace
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30082
